# edwh-restic-plugin

./: .gitignore  CHANGELOG.md  LICENSE.txt  README.md  pyproject.toml
examples/: .env  README.md  docker-compose.yml  init_setup.sh  tasks.py
examples/b2/edwh-backup-test/backup-testapplication/: config
examples/backup-testapplication/: config
examples/backup_test/: config
examples/captain-hooks/: backup_files_pg.sh  backup_files_sql.sh  backup_minecraft.py  backup_sh_files.sh  backup_stream.sh  backup_stream_sql.sh  restore_files.sh  restore_stream.sh  restore_stream_pg.sh
examples/recover_data/captain-hooks/: backup_files_pg.sh  restore_stream_sql.sh
src/edwh_restic_plugin/: __about__.py  env.py  forget.py  helpers.py  tasks.py  types.py
src/edwh_restic_plugin/repositories/: __init__.py  b2.py  hetzner.py  local.py  oracle.py  r2.py  s3.py  sftp.py  swift.py
tests/: __init__.py  test_forget_policy.py  test_repository_detection.py
